2001-11-26  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-parser.c (g_mime_parser_construct_part_internal): Fixed a
	bug - don't set bounds on the original stream, set the bounds on
	our temporary memory stream. Also got rid of find_header_end().

	* gmime-filter-from.c (filter_filter): initialize fromcount to 0.

	* test-pgpmime.c: Updated to use gmime-pgp-mime instead of
	pgp-mime.

	* test-pgp.c: Updated to use gmime-pgp-context instead of
	pgp-utils.

	* gmime-pgp-context.[c,h]: New source files, mostly implemented -
	god only knows if they actually work or not yet tho ;-)

	* gmime-pgp-mime.[c,h]: Same.

2001-11-25  Jeffrey Stedfast  <fejj@ximian.com>

	* strlib.c (strlcpy): BSD defines the prototype as returning
	size_t, the strlen of the resultant string.
	(strlcat): Same.

	* gmime-stream-buffer.c (stream_flush): Oops, memmove the buffer
	too and a smidgen of code cleanup.
	(stream_reset): Fix reset for block write mode.

	* configure.in: Bumped the version to 0.7.4 and added checks for
	system mmap functions.

	* gmime-stream-mmap.[c,h]: New stream that uses an mmaped buffer.

2001-11-24  Jeffrey Stedfast  <fejj@ximian.com>

	* doc/gmime-docs.sgml: Added documentation of the use of filters.

2001-11-23  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-stream-buffer.c (stream_seek): Implemented.

	* gmime-parser.c (parse_content_headers): Fixed another memory
	leak here.

	* gmime-param.c (decode_param_list): Fixed a small memory leak.

2001-11-22  Jeffrey stedfast  <fejj@ximian.com>

	* gmime-filter-from.[c,h]: New filter to escape from-lines.

	* pan-mime-parser.c (parser_read_until_boundary): Slight
	optimization.

2001-11-21  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-utils.c (is_8bit_word_encoded): Make into a macro, we
	don't need to do a strlen because the atom is a GString which
	means we have it's length already. This also saves us some
	overhead of calling a function.
	(g_mime_utils_8bit_header_decode): Update to pass the len argument